# SPDX-FileCopyrightText: Copyright (c) 2024 Scott Shawcroft for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitmatter"
version = "0.0.0+auto.0"
authors = [{name = "Scott Shawcroft", email = "scott@adafruit.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Home = "https://github.com/adafruit/circuitmatter"
"Bug Tracker" = "https://github.com/adafruit/circuitmatter/issues"

[tool.coverage.run]
branch = true
source = [
    "circuitmatter",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["circuitmatter"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
